# easydict-windows

./: .gitignore  README.md  build.bat  make_icon.ps1  package-lock.json  package.json  run.bat
.github/workflows/: release.yml
src/: app.js  float-icon.html  index.html  screenshot-select.html  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/src/: config.rs  lib.rs  main.rs  ocr.rs  translate.rs  tts.rs
